seaqt/QtCore/gen_qstate.h

class QAbstractState;
class QAbstractTransition;
class QEvent;
class QMetaObject;
class QObject;
class QSignalTransition;
class QState;
class QVariant;
typedef struct QAbstractState QAbstractState;
typedef struct QAbstractTransition QAbstractTransition;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSignalTransition QSignalTransition;
typedef struct QState QState;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
QState* QState_new();
QState* QState_new2(int childMode);
QState* QState_new3(QState* parent);
QState* QState_new4(int childMode, QState* parent);
QMetaObject* QState_metaObject(const QState* self);
void* QState_metacast(QState* self, const char* param1);
struct miqt_string QState_tr(const char* s);
struct miqt_string QState_trUtf8(const char* s);
QAbstractState* QState_errorState(const QState* self);
void QState_setErrorState(QState* self, QAbstractState* state);
void QState_addTransition(QState* self, QAbstractTransition* transition);
QSignalTransition* QState_addTransition2(QState* self, QObject* sender, const char* signal, QAbstractState* target);
QAbstractTransition* QState_addTransitionWithTarget(QState* self, QAbstractState* target);
void QState_removeTransition(QState* self, QAbstractTransition* transition);
struct miqt_array /* of QAbstractTransition* */  QState_transitions(const QState* self);
QAbstractState* QState_initialState(const QState* self);
void QState_setInitialState(QState* self, QAbstractState* state);
int QState_childMode(const QState* self);
void QState_setChildMode(QState* self, int mode);
void QState_assignProperty(QState* self, QObject* object, const char* name, QVariant* value);
struct miqt_string QState_tr2(const char* s, const char* c);
struct miqt_string QState_tr3(const char* s, const char* c, int n);
struct miqt_string QState_trUtf82(const char* s, const char* c);
struct miqt_string QState_trUtf83(const char* s, const char* c, int n);
bool QState_override_virtual_onEntry(void* self, intptr_t slot);
void QState_virtualbase_onEntry(void* self, QEvent* event);
bool QState_override_virtual_onExit(void* self, intptr_t slot);
void QState_virtualbase_onExit(void* self, QEvent* event);
bool QState_override_virtual_event(void* self, intptr_t slot);
bool QState_virtualbase_event(void* self, QEvent* e);
bool QState_override_virtual_eventFilter(void* self, intptr_t slot);
bool QState_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QState_override_virtual_timerEvent(void* self, intptr_t slot);
void QState_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QState_override_virtual_childEvent(void* self, intptr_t slot);
void QState_virtualbase_childEvent(void* self, QChildEvent* event);
bool QState_override_virtual_customEvent(void* self, intptr_t slot);
void QState_virtualbase_customEvent(void* self, QEvent* event);
bool QState_override_virtual_connectNotify(void* self, intptr_t slot);
void QState_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QState_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QState_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QState_delete(QState* self);